18169
The product of a quick game of feature-interaction bingo.

{code}
scala> object O { def foo(a: String)(b: a.type = a): a.type = b; { val x = ""; foo(x)() } }
<console>:7: error: type mismatch;
 found   : String
 required: x$1.type
       object O { def foo(a: String)(b: a.type = a): a.type = b; { val x = ""; foo(x)() } }
                                                                                  ^
{code}
